--- a/css/puls4.styl
+++ b/css/puls4.styl
@@ -3,6 +3,16 @@ naranja = #DD4F24
 gris_texto = #7A7A7A
 gris_oscuro = #444
 
+@font-face
+  font-family 'icomoon'
+  src:url('../fonts/icomoon.eot')
+  src:url('../fonts/icomoon.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf') format('truetype'),
+    url('../fonts/icomoon.woff') format('woff'),
+    url('../fonts/icomoon.svg#icomoon') format('svg')
+  font-weight normal
+  font-style normal
+
 a
   color naranja
 body
@@ -22,6 +32,7 @@ header
 
   .logo
     border-right 1px solid azul
+    float left
     width 60px
 
     img
@@ -45,6 +56,13 @@ header
       padding 0.2em 0.5em
       text-decoration none
       text-shadow 1px 1px 0px black
+
+      &:before
+        content "\e600"
+        display inline-block
+        font-family "icomoon"
+        margin 0 3px 0 0
+        text-shadow none
 
 
     .titulo
@@ -77,6 +95,13 @@ header
       width 50%
       z-index 0
 
+      &:after
+        content "\e602"
+        display block
+        font-family "icomoon"
+        margin 1px 0 0 1px
+        text-shadow 1px 1px 0px black
+
 
 
 nav
@@ -101,6 +126,9 @@ nav
     overflow-x auto
     white-space nowrap
 
+    &::-webkit-scrollbar
+      display none
+
     li
       display inline-block
 
@@ -122,6 +150,7 @@ nav
     border-radius 0 0 0.5em0.5em
     box-shadow 2px 2px 10px rgba(black,0.5)
     color gris_texto
+    margin-bottom 0.5em
 
     .acciones
       border-top 3px solid azul
@@ -139,19 +168,34 @@ nav
           padding 2px 5px
           text-decoration none
 
+        .estrellita
+          text-decoration none
+
+          &:after
+            color #FCB92D
+            content "\e601"
+            font-family "icomoon"
+            font-size 1.1em
+
       .votos
         float left
 
         .down
         .up
           text-decoration none
+          font-family "icomoon"
+          font-size 1.5em
+          vertical-align middle
 
         .down
           color red
+          &:before
+            content "\e602"
 
         .up
           color green
-
+          &:before
+            content "\e603"
     .descripcion
 
       .detalles
@@ -206,8 +250,23 @@ footer
       &:after
         content " - "
 
-.left
-  float left
+@media screen and (min-width: 768px)
+  header
+    .titular
+      .publicar
+        font-size 1.1em
+        padding-left 3em
+        position relative
+        &:before
+          left 0
+          font-size 2.5em
+          position absolute
+          top -10px
 
-.right
-  float right
+  .posts
+    .post
+      display inline-block
+      width 48%
+      vertical-align top
+      &:nth-child(odd)
+        margin-right 2%
